# latino-llvm

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  build.ninja  cmake_install.cmake  instalar.ps1  instalar.sh  instalar_debug.ps1  rules.ninja
lib/Analysis/: AnalysisDeclContext.cpp  BodyFarm.cpp  CFG.cpp  CFGReachabilityAnalysis.cpp  CFGStmtMap.cpp  CMakeLists.txt  CallGraph.cpp  CloneDetection.cpp  CocoaConventions.cpp  CodeInjector.cpp  ConstructionContext.cpp  Consumed.cpp  Dominators.cpp  ExprMutationAnalyzer.cpp  LiveVariables.cpp  ObjCNoReturn.cpp  PathDiagnostic.cpp  PostOrderCFGView.cpp  ProgramPoint.cpp  ReachableCode.cpp  RetainSummaryManager.cpp  ThreadSafety.cpp  ThreadSafetyCommon.cpp  ThreadSafetyLogical.cpp  ThreadSafetyTIL.cpp  UninitializedValues.cpp
lib/Tooling/: AllTUsExecution.cpp  ArgumentsAdjusters.cpp  CMakeLists.txt  CommonOptionsParser.cpp  CompilationDatabase.cpp  Execution.cpp  ExpandResponseFilesCompilationDatabase.cpp  FileMatchTrie.cpp  FixIt.cpp  GuessTargetAndModeCompilationDatabase.cpp  InterpolatingCompilationDatabase.cpp  JSONCompilationDatabase.cpp  Refactoring.cpp  RefactoringCallbacks.cpp  StandaloneExecution.cpp  Tooling.cpp
lib/Tooling/ASTDiff/: ASTDiff.cpp  CMakeLists.txt
lib/Tooling/Core/: CMakeLists.txt  Diagnostic.cpp  Lookup.cpp  Replacement.cpp
lib/Tooling/DependencyScanning/: CMakeLists.txt  DependencyScanningFilesystem.cpp  DependencyScanningService.cpp  DependencyScanningTool.cpp  DependencyScanningWorker.cpp  ModuleDepCollector.cpp
lib/Tooling/Syntax/: BuildTree.cpp  (+7 more)
tools/driver/: CMakeLists.txt  Makefile  cc1_main.cpp  cc1as_main.cpp  cc1gen_reproducer_main.cpp  cmake_install.cmake  driver.cpp
unittests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
unittests/AST/: ASTContextParentMapTest.cpp  ASTImporterFixtures.cpp  ASTImporterFixtures.h  ASTImporterGenericRedeclTest.cpp  ASTImporterODRStrategiesTest.cpp  ASTImporterTest.cpp  ASTImporterVisibilityTest.cpp  ASTPrint.h  ASTTraverserTest.cpp  ASTTypeTraitsTest.cpp  ASTVectorTest.cpp  CMakeLists.txt  CommentLexer.cpp  CommentParser.cpp  CommentTextTest.cpp  DataCollectionTest.cpp  DeclMatcher.h  DeclPrinterTest.cpp  DeclTest.cpp  EvaluateAsRValueTest.cpp  ExternalASTSourceTest.cpp  HasSideEffectsTest.cpp  MatchVerifier.h  NamedDeclPrinterTest.cpp  RecursiveASTVisitorTest.cpp  SizelessTypesTest.cpp  SourceLocationTest.cpp  StmtPrinterTest.cpp  StructuralEquivalenceTest.cpp
unittests/ASTMatchers/: ASTMatchersInternalTest.cpp  ASTMatchersNarrowingTest.cpp  ASTMatchersNodeTest.cpp  ASTMatchersTest.h  ASTMatchersTraversalTest.cpp  CMakeLists.txt  GtestMatchersTest.cpp
unittests/Analysis/: CFGBuildResult.h  CFGDominatorTree.cpp  CFGTest.cpp  CMakeLists.txt  CloneDetectionTest.cpp  ExprMutationAnalyzerTest.cpp
unittests/Basic/: CMakeLists.txt  CTestTestfile.cmake  CharInfoTest.cpp  DiagnosticTest.cpp  FileManagerTest.cpp  FixedPointTest.cpp  MemoryBufferCacheTest.cpp  SourceManagerTest.cpp  VirtualFileSystemTest.cpp  cmake_install.cmake
unittests/CodeGen/: BufferSourceTest.cpp  CMakeLists.txt  CodeGenExternalTest.cpp  IRMatchers.h  IncrementalProcessingTest.cpp  TBAAMetadataTest.cpp
unittests/CrossTU/: CMakeLists.txt  CrossTranslationUnitTest.cpp
unittests/DirectoryWatcher/: CMakeLists.txt  DirectoryWatcherTest.cpp
unittests/Driver/: CMakeLists.txt  DistroTest.cpp  ModuleCacheTest.cpp  MultilibTest.cpp  SanitizerArgsTest.cpp  ToolChainTest.cpp
unittests/Format/: CMakeLists.txt  CleanupTest.cpp  FormatTest.cpp  FormatTestCSharp.cpp  FormatTestComments.cpp  FormatTestJS.cpp  FormatTestJava.cpp  FormatTestObjC.cpp  FormatTestProto.cpp  FormatTestRawStrings.cpp  FormatTestSelective.cpp  FormatTestTableGen.cpp  FormatTestTextProto.cpp  FormatTestUtils.h  NamespaceEndCommentsFixerTest.cpp  SortImportsTestJS.cpp  SortImportsTestJava.cpp  SortIncludesTest.cpp  UsingDeclarationsSorterTest.cpp
unittests/Frontend/: ASTUnitTest.cpp  CMakeLists.txt  CodeGenActionTest.cpp  CompilerInstanceTest.cpp  CompilerInvocationTest.cpp  FixedPointString.cpp  FrontendActionTest.cpp  OutputStreamTest.cpp  PCHPreambleTest.cpp  ParsedSourceLocationTest.cpp
unittests/Index/: CMakeLists.txt  IndexTests.cpp
unittests/Lex/: CMakeLists.txt  CTestTestfile.cmake  DependencyDirectivesSourceMinimizerTest.cpp  HeaderMapTest.cpp  HeaderSearchTest.cpp  LexerTest.cpp  PPCallbacksTest.cpp  PPConditionalDirectiveRecordTest.cpp  cmake_install.cmake
unittests/Rename/: CMakeLists.txt  ClangRenameTest.h  RenameAliasTest.cpp  RenameClassTest.cpp  RenameEnumTest.cpp  RenameFunctionTest.cpp  RenameMemberTest.cpp
unittests/Rewrite/: CMakeLists.txt  RewriteBufferTest.cpp  RewriterTest.cpp
unittests/Sema/: CMakeLists.txt  CodeCompleteTest.cpp  ExternalSemaSourceTest.cpp  GslOwnerPointerInference.cpp
unittests/Serialization/: CMakeLists.txt  InMemoryModuleCacheTest.cpp
unittests/StaticAnalyzer/: AnalyzerOptionsTest.cpp  CMakeLists.txt  CallDescriptionTest.cpp  CallEventTest.cpp  CheckerRegistration.h  FalsePositiveRefutationBRVisitorTest.cpp  ParamRegionTest.cpp  RangeSetTest.cpp  RegisterCustomCheckersTest.cpp  Reusables.h  StoreTest.cpp  SymbolReaperTest.cpp  TestReturnValueUnderConstruction.cpp
unittests/Tooling/: ASTSelectionTest.cpp  CMakeLists.txt  CastExprTest.cpp  CommentHandlerTest.cpp  CompilationDatabaseTest.cpp  DependencyScannerTest.cpp  DiagnosticsYamlTest.cpp  ExecutionTest.cpp  FixItTest.cpp  HeaderIncludesTest.cpp  LexicallyOrderedRecursiveASTVisitorTest.cpp  LookupTest.cpp  QualTypeNamesTest.cpp  RangeSelectorTest.cpp  RecursiveASTVisitorTestDeclVisitor.cpp  RecursiveASTVisitorTestPostOrderVisitor.cpp  RecursiveASTVisitorTestTypeLocVisitor.cpp  RefactoringActionRulesTest.cpp  RefactoringCallbacksTest.cpp  RefactoringTest.cpp  ReplacementTest.h  ReplacementsYamlTest.cpp  RewriterTest.cpp  RewriterTestContext.h  SourceCodeBuildersTest.cpp  SourceCodeTest.cpp  StencilTest.cpp  TestVisitor.h  ToolingTest.cpp  TransformerTest.cpp
unittests/libclang/: CMakeLists.txt  LibclangTest.cpp  TestUtils.h
(+1767 files in other folders)
